# psrust_ensimag

./: .gitignore  Cargo.toml
benches/: benchmark.rs
rpt/: rpt.tex
rpt/bckp/criterion/01 iter/5/report/: index.html
rpt/bckp/criterion/01 iter/iter_hyb/5/base/: benchmark.json  estimates.json
rpt/bckp/criterion/01 iter/iter_hyb/5/new/: raw.csv  sample.json  tukey.json
rpt/bckp/criterion/01 iter/iter_hyb/5/report/: index.html
rpt/bckp/criterion/01 iter/iter_par/5/base/: estimates.json  sample.json  tukey.json
rpt/bckp/criterion/01 iter/iter_par/5/new/: benchmark.json  raw.csv
rpt/bckp/criterion/01 iter/iter_par/5/report/: index.html
rpt/bckp/criterion/01 iter/report/: index.html
rpt/bckp/criterion/02 iter_opti/5/report/: index.html
rpt/bckp/criterion/02 iter_opti/report/: index.html
rpt/bckp/criterion/03 iter_iter_opti/5/report/: index.html
rpt/bckp/criterion/03 iter_iter_opti/report/: index.html
rpt/bckp/criterion/04 recur/5/report/: index.html
rpt/bckp/criterion/04 recur/report/: index.html
rpt/bckp/criterion/05 recur_opti/5/report/: index.html
rpt/bckp/criterion/05 recur_opti/report/: index.html
rpt/bckp/criterion/06 recur_recur_opti/5/report/: index.html
rpt/bckp/criterion/06 recur_recur_opti/report/: index.html
rpt/bckp/criterion/07 iter_recur/5/report/: index.html
rpt/bckp/criterion/07 iter_recur/report/: index.html
rpt/bckp/criterion/08 iter_recur_opti/5/report/: index.html
rpt/bckp/criterion/08 iter_recur_opti/report/: index.html
rpt/bckp/criterion/report/: index.html
src/: lib.rs  main.rs
(+120 files in other folders)
