[package]
name = "td1"
version = "0.1.0"
authors = ["csk <karthik-subramanyam.chakka@grenoble-inp.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
#rayon = "*"
rayon={git="https://github.com/wagnerf42/rayon", branch="tracing"}
fast-tracer={git="https://github.com/wagnerf42/fast-tracer"}

#[dev-dependencies]
#criterion = "*"
#
#[[bench]]
#name = "benchmark"
#harness = false